# software-navigation-module

./: CMakeLists.txt  build.ps1  main.cpp
include/: packet.hpp  ring_buffer.hpp  spi_comm.hpp
src/: main.cpp  spi_comm.cpp
versions/: v1.uf2  v2.uf2
